build: open JDK internals for Robolectric on JDK 21
Robolectric reaches into java.base internals via reflection to fake
things like ApplicationSharedMemory. The JDK 21 toolchain's module
system blocks that without --add-opens, which trips as
IllegalAccessException: module java.base does not export
jdk.internal.access to unnamed module. Needed ahead of the pending
Robolectric 4.17 bump, which exercises the path that fails without it.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Signed-off-by: Jayson Petersen <jayson.petersen@gmail.com>